Fix: Prevent overlapping of top district names
* Top district text overflow problem solved

* Fix overlapping with bar chart

* Reduce number of bars on phone

--- a/src/App.scss
+++ b/src/App.scss
@@ -3329,9 +3329,7 @@ footer {
   .district-bar-left {
     display: flex;
     flex-direction: column;
-    flex-grow: 15rem;
-    flex-shrink: 0;
-    margin-right: 1rem;
+    flex-grow: 1;
   }
 
   .district-bar-right {
@@ -3383,7 +3381,7 @@ footer {
       flex-direction: row;
       height: 2.5rem;
       justify-content: flex-start;
-      margin-right: 1rem;
+      margin-right: 0.5rem;
 
       h2,
       h5 {
@@ -3394,7 +3392,6 @@ footer {
 
       h5 {
         display: inline-block !important;
-        flex: 0 1;
         margin-left: 0.5rem;
         margin-top: 0.15rem;
         width: auto !important;
